--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
