--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "@multiavatar/multiavatar": "^1.0.7",
     "axios": "^1.2.0",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^10.0.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
+    "gravatar": "^1.8.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "lazerpay-node-sdk": "^0.2.1",
+    "minidenticons": "^2.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.7.2",
     "shortid": "^2.2.16",
     "socket.io": "^4.5.4",
+    "svg-png-converter": "^0.0.9",
     "unique-names-generator": "^4.7.1"
   }
 }
