--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "shortid": "^2.2.16",
     "socket.io": "^4.5.4",
     "svg-png-converter": "^0.0.9",
-    "unique-names-generator": "^4.7.1"
+    "unique-names-generator": "^4.7.1",
+    "uuid": "^9.0.0"
   }
 }
